fix gap between cards

--- a/src/components/productsList/productsList.module.css
+++ b/src/components/productsList/productsList.module.css
@@ -11,7 +11,8 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: auto;
-    gap: 25px;
+    column-gap: 25px;
+    row-gap: 15px;
     justify-content: flex-start;
   }
 }
